--- a/admin-starter/src/main/webapp/charges-list.xhtml
+++ b/admin-starter/src/main/webapp/charges-list.xhtml
@@ -9,7 +9,7 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
 
 	<ui:define name="metadata">
-		<ui:param name="title" value="proprietes" />
+		<ui:param name="title" value="chargess" />
 		<!-- Automatic create breadCrumb and page title when param 'title' is provided. -->
 		<style type="text/css">
 .ui-datatable .ui-datatable-header {
@@ -26,34 +26,32 @@
 			<div class="box box-primary">
 				<div class="box-header with-border">
 					<div id="main-buttons" class="hidden-sm hidden-xs">
-						<p:commandButton action="/propriete-form?faces-redirect=true"
-							icon="fa fa-plus" value="New" styleClass="btn-primary" />
+						<p:commandButton action="/charges-form?faces-redirect=true"
+							icon="fa fa-plus" value="New charge" styleClass="btn-primary" />
 						<p:spacer width="5" />
 
 						<p:spacer width="5" />
 						<p:commandButton value="View selected" update="@(.ui-dialog)"
 							styleClass="btn-info"
-							disabled="#{empty proprieteListMB.selectedProprietes or proprieteListMB.selectedProprietes.size() == 0}"
-							oncomplete="PF('selectedProprietes').show()" icon="fa fa-search" />
+							disabled="#{empty chargesListMB.selectedChargess or chargesListMB.selectedChargess.size() == 0}"
+							oncomplete="PF('selectedChargess').show()" icon="fa fa-search" />
 					</div>
 
-					<p:splitButton value="New"
-						action="/propriete-form?faces-redirect=true" icon="fa fa-plus"
-						styleClass="hidden-md hidden-lg btn-primary">
+					<p:splitButton value="New" action="/charges-form?faces-redirect=true"
+						icon="fa fa-plus" styleClass="hidden-md hidden-lg btn-primary">
 
 						<p:menuitem value="View selected" update="@(.ui-dialog)"
-							oncomplete="PF('selectedProprietes').show()"
-							disabled="#{empty proprieteListMB.selectedProprietes or proprieteListMB.selectedProprietes.size() == 0}"
+							oncomplete="PF('selectedChargess').show()"
+							disabled="#{empty chargesListMB.selectedChargess or chargesListMB.selectedChargess.size() == 0}"
 							icon="fa fa-search" />
 					</p:splitButton>
 
 					<p:separator />
-					<p:dataTable widgetVar="proprietesTable" var="c"
-						value="#{proprieteListMB.proprietes}" rows="5"
-						rowKey="#{c.idPropriete}" lazy="true" paginator="true"
-						filteredValue="#{proprieteListMB.filteredValue}"
-						paginatorPosition="bottom"
-						selection="#{proprieteListMB.selectedProprietes}"
+					<p:dataTable widgetVar="chargessTable" var="c"
+						value="#{chargesListMB.chargess}" rows="5" rowKey="#{c.idCharges}"
+						lazy="true" paginator="true"
+						filteredValue="#{chargesListMB.filteredValue}"
+						paginatorPosition="bottom" selection="#{chargesListMB.selectedChargess}"
 						paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown} {JumpToPageDropdown}"
 						currentPageReportTemplate="[ {startRecord} to {endRecord} of {totalRecords} ]"
 						rowsPerPageTemplate="5,10,15,20,30">
@@ -69,56 +67,42 @@
 
 
 						<f:facet name="header">
-                            Find propriete by id: <p:inputNumber
-								id="inptId" decimalPlaces="0"
-								value="#{proprieteListMB.idPropriete}" />
+                            Find charges by id: <p:inputNumber id="inptId"
+								decimalPlaces="0" value="#{chargesListMB.idCharges}" />
 							<p:spacer height="5" />
 							<p:commandButton id="brFind" value="Find"
-								action="#{proprieteListMB.findproprieteById(proprieteListMB.idPropriete)}"
+								action="#{chargesListMB.findChargesById(chargesListMB.idCharges)}"
 								process="@form" update="@form"
 								styleClass="btn-flat bg-black btn-states" partialSubmit="true" />
 						</f:facet>
 						<p:column selectionMode="multiple" width="5%"
 							styleClass="align-center" />
 
-						<p:column headerText="Nom" filterBy="#{c.nomPropriete}"
-							sortBy="#{c.nomPropriete}" filterMatchMode="contains">
+						<p:column headerText="Nom" filterBy="#{c.nomCharges}"
+							sortBy="#{c.nomCharges}" filterMatchMode="contains">
 							<f:facet name="filter">
-								<p:autoComplete
-									value="#{proprieteListMB.filter.entity.nomPropriete}"
+								<p:autoComplete value="#{chargesListMB.filter.entity.nomCharges}"
 									forceSelection="true" minQueryLength="1" queryDelay="500"
-									completeMethod="#{proprieteListMB.completeModel}"
-									maxResults="10">
+									completeMethod="#{chargesListMB.completeModel}" maxResults="10">
 									<p:ajax event="itemSelect" process="@this" update="@none"
-										oncomplete="PF('proprietesTable').filter()" />
+										oncomplete="PF('chargessTable').filter()" />
 								</p:autoComplete>
 							</f:facet>
-							<p:link value="#{c.nomPropriete}" outcome="/propriete-form.xhtml">
-								<f:param name="id" value="#{c.idPropriete}" />
+							<p:link value="#{c.nomCharges}" outcome="/charges-form.xhtml">
+								<f:param name="id" value="#{c.idCharges}" />
 							</p:link>
 
 						</p:column>
-						<p:column headerText="Adresse" sortBy="#{c.adressePropriete}"
-							filterBy="#{c.adressePropriete}">
+						
+						<p:column headerText="Type" sortBy="#{c.nomCharges}"
+							filterBy="#{c.nomCharges}">
 							<f:facet name="filter">
-								<p:inputText
-									value="#{proprieteListMB.filter.entity.adressePropriete}">
+								<p:inputText value="#{chargesListMB.filter.entity.nomCharges}">
 									<p:ajax process="@this" update="@none"
-										oncomplete="PF('proprietesTable').filter()" />
+										oncomplete="PF('chargessTable').filter()" />
 								</p:inputText>
 							</f:facet>
-                           #{c.adressePropriete}
-                        </p:column>
-						<p:column headerText="Ville" sortBy="#{c.ville.nomVille}"
-							filterBy="#{c.ville.nomVille}">
-<!-- 							<f:facet name="filter"> -->
-<!-- 								<p:inputText -->
-<!-- 									value="#{c.ville.nomVille}"> -->
-<!-- 									<p:ajax process="@this" update="@none" -->
-<!-- 										oncomplete="PF('proprietesTable').filter()" /> -->
-<!-- 								</p:inputText> -->
-<!-- 							</f:facet> -->
-                           #{c.ville.nomVille}
+                          #{chargesFixeHome.findById(c.idCharges)!=null?'Fixe':'Temporaire'}
                         </p:column>
 					</p:dataTable>
 				</div>
@@ -134,12 +118,11 @@
 			</p:confirmDialog>
 		</h:form>
 
-		<p:dialog header="Selected proprietes" widgetVar="selectedProprietes"
+		<p:dialog header="Selected chargess" widgetVar="selectedChargess"
 			height="250" width="400" responsive="true" styleClass="box-success">
-			<p:dataList id="selectedProprietesList"
-				value="#{proprieteListMB.selectedProprietes}" var="propriete"
-				type="definition">
-                ID: #{propriete.idPropriete} - Name: #{propriete.nomPropriete}
+			<p:dataList id="selectedChargessList"
+				value="#{chargesListMB.selectedChargess}" var="charges" type="definition">
+                ID: #{charges.idCharges} - Name: #{charges.nomCharges}
             </p:dataList>
 		</p:dialog>
 
