--- a/admin-starter/src/main/webapp/charges-form.xhtml
+++ b/admin-starter/src/main/webapp/charges-form.xhtml
@@ -74,7 +74,7 @@
 								value="#{chargesFormMB.charges.nomCharges}" />
 						</div>
 						<div class="ui-sm-12 ui-md-2 ui-lg-1">
-                            <p:outputLabel value=Montant for="inptPrice"/>
+                            <p:outputLabel value="Montant" for="inptPrice"/>
                         </div>
                         <div class="ui-sm-12 ui-md-4 ui-lg-5" >
                             <p:inputNumber id="inptPrice" value="#{chargesFormMB.charges.montantCharge}"/>
