--- a/admin-starter/src/main/webapp/user-list.xhtml
+++ b/admin-starter/src/main/webapp/user-list.xhtml
@@ -27,7 +27,7 @@
 				<div class="box-header with-border">
 					<div id="main-buttons" class="hidden-sm hidden-xs">
 						<p:commandButton action="/user-form?faces-redirect=true"
-							icon="fa fa-plus" value="New admin" styleClass="btn-primary" />
+							icon="fa fa-plus" value="Nouveau utilisateur" styleClass="btn-primary" />
 						<p:spacer width="5" />
 
 						<p:spacer width="5" />
