--- a/admin-starter/src/main/webapp/ville-list.xhtml
+++ b/admin-starter/src/main/webapp/ville-list.xhtml
@@ -24,7 +24,7 @@
                 <div class="box-header with-border">
                     <div id="main-buttons" class="hidden-sm hidden-xs">
                         <p:commandButton action="/ville-form?faces-redirect=true" icon="fa fa-plus"
-                                         value="New" styleClass="btn-primary"/>
+                                         value="Nouvelle ville" styleClass="btn-primary"/>
                         <p:spacer width="5"/>
                         
                         <p:spacer width="5"/>
