--- a/admin-starter/src/main/webapp/car-list.xhtml
+++ b/admin-starter/src/main/webapp/car-list.xhtml
@@ -25,7 +25,7 @@
                 <div class="box-header with-border">
                     <div id="main-buttons" class="hidden-sm hidden-xs">
                         <p:commandButton action="/car-form?faces-redirect=true" icon="fa fa-plus"
-                                         value="New" styleClass="btn-primary"/>
+                                         value="Nouveau" styleClass="btn-primary"/>
                         <p:spacer width="5"/>
                         <p:commandButton value="Delete Selected" icon="fa fa-trash" styleClass="btn-danger"
                                          action="#{carListMB.delete}"
@@ -40,7 +40,7 @@
                                          oncomplete="PF('selectedCars').show()" icon="fa fa-search"/>
                     </div>
 
-                    <p:splitButton value="New" action="/car-form?faces-redirect=true"
+                    <p:splitButton value="Nouveau" action="/car-form?faces-redirect=true"
                                    icon="fa fa-plus"
                                    styleClass="hidden-md hidden-lg btn-primary">
                         <p:menuitem value="Delete Selected" action="#{carListMB.delete}"
