--- a/admin-starter/src/main/webapp/index.xhtml
+++ b/admin-starter/src/main/webapp/index.xhtml
@@ -12,7 +12,7 @@
 		<h2 class="align-center">Bienvenue à l'application de gestion
 			syndicale</h2>
 		<br />
-		<h3>Tableau de bord</h3>
+		<h3>--Tableau de bord--</h3>
 
 	</ui:define>
 
