--- a/admin-starter/src/main/webapp/index.xhtml
+++ b/admin-starter/src/main/webapp/index.xhtml
@@ -12,8 +12,10 @@
 		<h2 class="align-center">Bienvenue à l'application de gestion
 			syndicale</h2>
 		<br />
-		<h3>--Tableau de bord--</h3>
-
+<!-- 		<p:chart type="pie" model="#{chartView.pieModel1}" -->
+<!-- 			style="height:300px" /> -->
+		<p:chart type="bar" model="#{chartView.barModel}"
+			style="height:300px" />
 	</ui:define>
 
 
